objects/GEMS_Prod_Reverse_Eligibility_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Act_Send_Date__c</fullName>
        <label>Act Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GET_Case__c</fullName>
        <label>GET Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Prod Reverse Eligibility Feed</relationshipLabel>
        <relationshipName>GEMS_Prod_Reverse_Eligibility_Feeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Number__c</fullName>
        <label>Production File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Send_Date__c</fullName>
        <label>Target Send Date</label>
        <type>Date</type>
    </fields>
    <label>GEMS Prod Reverse Eligibility Feed</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Prod Reverse Eligibility Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Prod Reverse Eligibility Feeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>